Do not assume layout of msghdr and iovec structure

Summary:
Class FDMessageHeader assumes the layout of msghdr and iovec structure in its constructor. However, this assumption is wrong
because as per POSIX standards both may contain more members than usual. This patch fixes the issue.

BUG: 391367

Reviewers: dfaure, awilcox

Subscribers: #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D11011